--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -6,6 +6,8 @@ on:
         required: true
       CACHE_KEY:
         required: true
+      CYPRESS_RUN:
+        required: true
 jobs:
   e2e:
     name: run end to end test cases
@@ -34,4 +36,4 @@ jobs:
       - name: start web server
         run: SERVER_SSL=true CONFIG_SERVICE_MOCK_FILE=__mocks__/mockConfig.json CONFIG_SERVICE_MOCK=true NODE_ENV=production NODE_CONFIG_ENV=test node server.js &
       - name: end to end tests
-        run: yarn run cypress --headless --browser chrome
+        run: ${{secrets.CYPRESS_RUN}}
