--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -4,8 +4,6 @@ on:
     secrets:
       NPM_TOKEN:
         required: true
-      CACHE_KEY:
-        required: true
 jobs:
   unit_test:
     name: run unit test cases
@@ -19,7 +17,7 @@ jobs:
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
-          key: ${{secrets.CACHE_KEY}}
+          key:  ${{ github.event.repository.name }}-packages-v1
       - name: Install Dependencies
         run: |
           set -euxo pipefail
