--- a/.github/workflows/serverless-deploy.yaml
+++ b/.github/workflows/serverless-deploy.yaml
@@ -6,6 +6,21 @@ on:
         required: true
         type: string
         description: environment to deploy to
+    secrets:
+      NPM_TOKEN:
+        required: true
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
+      ZEPHR_API_SECRET_KEY:
+        required: false
+      ZEPHR_API_ACCESS_KEY:
+        required: false
+      SAILTHRU_API_ACCESS_KEY:
+        required: false
+      SAILTHRU_API_SECRET_KEY:
+        required: false
 jobs:
   deploy:
     name: deploy serverless stack
@@ -13,19 +28,10 @@ jobs:
     environment: ${{inputs.env}}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "14.x"
-          registry-url: https://registry.npmjs.org/
-          cache: "yarn"
-      - name: Install Packages
-        run: yarn install --pure-lockfile --ignore-engines
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - name: serverless deploy to ${{inputs.env}}
         uses: serverless/github-action@v3
         with:
-          args: -c "sls config credentials --provider aws --key "$AWS_ACCESS_KEY_ID" --secret "$AWS_SECRET_ACCESS_KEY" --profile ${{inputs.env}} && sls deploy --stage ${{inputs.env}}"
+          args: -c "echo '//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}' > ~/.npmrc && yarn install --ignore-engines && sls config credentials --provider aws --key "$AWS_ACCESS_KEY_ID" --secret "$AWS_SECRET_ACCESS_KEY" --profile ${{inputs.env}} && sls deploy --stage ${{inputs.env}}"
           entrypoint: /bin/sh
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
