--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -34,6 +34,6 @@ jobs:
       - name: start mock server
         run: yarn run start:mock &
       - name: start web server
-        run: SERVER_SSL=true PORT={{secrets.PORT}} CONFIG_SERVICE_MOCK_FILE=__mocks__/mockConfig.json CONFIG_SERVICE_MOCK=true NODE_ENV=production NODE_CONFIG_ENV=test node server.js &
+        run: SERVER_SSL=true PORT=${{secrets.PORT}} CONFIG_SERVICE_MOCK_FILE=__mocks__/mockConfig.json CONFIG_SERVICE_MOCK=true NODE_ENV=production NODE_CONFIG_ENV=test node server.js &
       - name: end to end tests
         run: ${{secrets.CYPRESS_RUN}}
