new cluster deploy changes

--- a/.github/workflows/serverless-deploy.yaml
+++ b/.github/workflows/serverless-deploy.yaml
@@ -31,12 +31,12 @@ jobs:
       - name: serverless deploy to ${{inputs.env}}
         uses: serverless/github-action@v3
         with:
-          args: -c "echo '//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}' > ~/.npmrc && yarn install --ignore-engines && sls config credentials --provider aws --key "$AWS_ACCESS_KEY_ID" --secret "$AWS_SECRET_ACCESS_KEY" --profile ${{inputs.env}} && sls deploy --stage ${{inputs.env}}"
+          args: -c "echo '//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}' > ~/.npmrc && yarn install --ignore-engines && sls config credentials --provider aws --key "$AWS_ACCESS_KEY_ID_NEW_CLUSTER" --secret "$AWS_SECRET_ACCESS_KEY_NEW_CLUSTER" --profile ${{inputs.env}} && sls deploy --stage ${{inputs.env}}"
           entrypoint: /bin/sh
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ZEPHR_API_SECRET_KEY: ${{ secrets.ZEPHR_API_SECRET_KEY }}
-          ZEPHR_API_ACCESS_KEY: ${{ secrets.ZEPHR_API_ACCESS_KEY }}
-          SAILTHRU_API_ACCESS_KEY: ${{ secrets.SAILTHRU_API_ACCESS_KEY }}
-          SAILTHRU_API_SECRET_KEY: ${{ secrets.SAILTHRU_API_SECRET_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_NEW_CLUSTER }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_NEW_CLUSTER }}
+          ZEPHR_API_SECRET_KEY: ${{ secrets.ZEPHR_API_SECRET_KEY_NEW_CLUSTER }}
+          ZEPHR_API_ACCESS_KEY: ${{ secrets.ZEPHR_API_ACCESS_KEY_NEW_CLUSTER }}
+          SAILTHRU_API_ACCESS_KEY: ${{ secrets.SAILTHRU_API_ACCESS_KEY_NEW_CLUSTER }}
+          SAILTHRU_API_SECRET_KEY: ${{ secrets.SAILTHRU_API_SECRET_KEY_NEW_CLUSTER }}
