--- a/.github/workflows/serverless-deploy.yaml
+++ b/.github/workflows/serverless-deploy.yaml
@@ -6,6 +6,10 @@ on:
         required: true
         type: string
         description: environment to deploy to
+      custom_env:
+        required: true
+        type: string
+        description: environment to read secrets
     secrets:
       NPM_TOKEN:
         required: true
@@ -25,7 +29,7 @@ jobs:
   deploy:
     name: deploy serverless stack
     runs-on: ubuntu-latest
-    environment: ${{inputs.env}}
+    environment: ${{inputs.custom_env}}
     steps:
       - uses: actions/checkout@v2
       - name: serverless deploy to ${{inputs.env}}
