--- a/.github/workflows/serverless-deploy.yaml
+++ b/.github/workflows/serverless-deploy.yaml
@@ -29,7 +29,7 @@ jobs:
   deploy:
     name: deploy serverless stack
     runs-on: ubuntu-latest
-    environment: dev
+    environment: ${{inputs.custom_env}}
     steps:
       - uses: actions/checkout@v2
       - name: ${{inputs.env}}
