--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: start mock server
         run: yarn run start:mock &
       - name: start web server
-        run: SERVER_SSL=true CONFIG_SERVICE_MOCK_FILE=__mocks__/mockConfig.json CONFIG_SERVICE_MOCK=true NODE_ENV=production NODE_CONFIG_ENV=test node server.js &
+        run: SERVER_SSL=true CONFIG_SERVICE_MOCK_FILE=__mocks__/mockConfig.json CONFIG_SERVICE_MOCK=true NODE_ENV=production NODE_CONFIG_ENV=test node -r dotenv/config server.js &
         env:
           PORT: ${{ secrets.PORT }}
       - name: end to end tests
