--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -16,6 +16,8 @@ jobs:
           node-version-file: '.nvmrc'
           registry-url: https://registry.npmjs.org/
           cache: 'npm'
+        env:
+          FORCE_COLOR: 0
       - name: Cache node modules
         uses: actions/cache@v2
         env:
